# linux-hw

ENV-1.2/: task1  task1.cpp  task2  task2.cpp
ENV-2/: CMakeLists.txt  Complex.cpp  Complex.h  Sort.cpp  Sort.h  main.cpp
FS-1/: Makefile  read-file.cpp
FS-10/: CMakeLists.txt  copy.cpp
FS-2/: Makefile  simple-copy.cpp
FS-3/: CMakeLists.txt  hacker-rm.cpp
FS-4/: CMakeLists.txt  redirect.cpp  text.txt
FS-5/: CMakeLists.txt  manual-append.cpp
IPC-1/: CMakeLists.txt  signal-echo.cpp
IPC-2/: CMakeLists.txt  a.out  prime_calculator.cpp
IPC-3/: CMakeLists.txt  clean.cpp  first.cpp  second.cpp  shared_array.cpp  shared_array.h
IPC-4/: CMakeLists.txt  client.cpp  server.cpp
PS-1/: CMakeLists.txt  do-command.cpp
PS-2/: CMakeLists.txt  a.out  interactive-shell.cpp
TH-1/: CMakeLists.txt  array-sum.cpp
TH-2/: CMakeLists.txt  demo.cpp  parallel_scheduler.cpp  parallel_scheduler.h
extraHwModul2/: a.out  http_client.cpp  httpforevor.html
